compiler/testData/cli/jvm/firError.out
warning: ATTENTION!
 This build uses experimental K2 compiler:
  -Xuse-k2
compiler/testData/cli/jvm/firError.kt:5:13: error: variable 'x' must be initialized
    println(x)
            ^
compiler/testData/cli/jvm/firError.kt:10:16: error: public subclass exposes its private-in-file supertype 'Private'
class Public : Private() {
               ^
compiler/testData/cli/jvm/firError.kt:10:16: error: this type is final, so it cannot be inherited from
class Public : Private() {
               ^
compiler/testData/cli/jvm/firError.kt:11:5: error: property must be initialized or be abstract
    val x: Private
    ^
compiler/testData/cli/jvm/firError.kt:11:9: error: public property exposes its private-in-file type 'Private'
    val x: Private
        ^
COMPILATION_ERROR
